steps/10-https/ingress-rocketchat.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rocketchat-ingress
spec:
  tls:
    - hosts:
        - rocketchat.tycho.cloud
        - www.rocketchat.tycho.cloud
      secretName: rocketchat-production-tls
  rules:
    - host: rocketchat.tycho.cloud
      http:
        paths:
          - path: /
            backend:
              serviceName: rocketchat-web
              servicePort: 80
